--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.6",
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/pickers": "^3.1.0",
     "antd": "^3.19.2",
     "bootstrap": "^4.3.1",
+    "date-fns": "^2.0.0-alpha.31",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
