--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.0.1",
     "@material-ui/pickers": "^3.1.0",
     "antd": "^3.19.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.31",
     "react": "^16.8.6",
