--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.31",
+    "firebase": "^6.2.2",
     "react": "^16.8.6",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.9",
