--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.31",
     "firebase": "^6.2.2",
+    "google-map-react": "^1.1.4",
     "react": "^16.8.6",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.9",
