--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.31",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "firebase": "^6.2.2",
+    "mongoose": "^5.6.1",
+    "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -21,7 +25,8 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    
+     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,5 +57,7 @@
   "bugs": {
     "url": "https://github.com/Vibs00/restaurant_booking_system/issues"
   },
-  "homepage": "https://github.com/Vibs00/restaurant_booking_system#readme"
+  "homepage": "https://github.com/Vibs00/restaurant_booking_system#readme",
+  "devDependencies": {},
+  "keywords": []
 }
